  duplicate notification msgs.
- Added SENDSNO server command, similar to SENDUMODE but for snomasks, this is
  used by the spamfilter snomask (+S) so you get network-wide notifications.
- Added "compiled for.." versioning system, this way a beta17 module can't be loaded
  on beta18, etc... People often forgot to recompile their modules or had old ones
  somewhere by mistake, therefore crashing after upgrades... this should fix this
  (in the future). Module coders don't have to do anything for making this work,
  it's done automatically (via modules.h).
- Forgot to add src/modules/m_sendsno.c to CVS, also fixed 2 compile warnings
  and a crashbug related to previous commit.. bug hunting will continue ;).
- Fixed minor compile warning.
- Added a section "Security tips/checklist" to unreal32docs.html, this is something
  I worked on a few months ago... It tries to explain how to get a server/network
  secured, what the potential risks are, etc... Of course security is a complex topic
  so I cannot talk about everything in it, but I tried to mention the main risks and
  what you can do about it in a (hopefully) simple and understandable language ;).
- Fixed a snomask bug reported by Cat / HERZ (#0001531).
- Started using the umode->allowed stuff a bit ourselves, just to be sure.
- Fixed a problem with module reloading (#0001533) reported by penna.
- Removed remote /restart support. There are too many security issues that
  can not be overcome. 
- Added a patch by thilo to make Unreal correctly deal with umask settings when
  creating devices in a chroot'ed environment. (#0001514)
- Added commands SVSSNO and SVS2SNO (work just like SVSMODE/SVS2MODE but for snomasks)
  suggested by x64 (#0001461).
- Added 80% of release notes, rest will be added a day before release or so :).
- We are having fun with Makefiles...
- Updated the Donation file to talk about the PayPal address to make donating easier
  (hint hint.. ;)